# xtils

./: .dockerignore  .gitignore  README.md  pyproject.toml
tests/: test_jitpp.py  test_jitpp_future.py
tests/domains/atari/: test_processors.py
tests/rl/tabular/: test_dynamic_programming.py
xtils/: jdbpp.py  jitpp.py  stade.py  vscode.py
xtils/clu/: metric_writers.py
xtils/domains/atari/: __init__.py  baselines.py  environment.py  metadata.py  processors.py
xtils/fiddle/: auto_sweep.py  printing.py
xtils/plotting/: __init__.py  baselines.py  objects.py
xtils/rl/tabular/: dynamic_programming.py  mdp.py  spectral.py  types.py
