[tool.pdm]
distribution = true

[project]
name = "xtils"
version = "0.1.0"
description = "A collection of utilities for machine learning experiments."
authors = [{ name = "Jesse Farebrother", email = "jessefarebro@gmail.com" }]
dependencies = []

[project.optional-dependencies]
jitpp = ["jax"]
stade = ["jax", "gymnasium", "dm-env", "wrapt", "numpy", "more-itertools"]
vscode = ["debugpy", "portpicker", "requests"]
clu = ["clu", "aim", "wandb", "fancyflags"]
plotting = [
    "frozendict",
    "seaborn",
    "matplotlib",
    "pandas",
    "aiohttp-client-cache",
    "scipy",
]
domains = ["jax", "dm-env", "ale-py", "opencv-python", "numpy"]
fiddle = ["fiddle"]
rl = ["jax", "jaxtyping", "chex", "matplotlib", "numpy", "scipy"]

all = [
    "xtils[jitpp]",
    "xtils[stade]",
    "xtils[vscode]",
    "xtils[clu]",
    "xtils[plotting]",
    "xtils[domains]",
    "xtils[fiddle]",
    "xtils[rl]",
]

requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = "-ra -q --ignore build"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingTypeArgument = true

[tool.ruff]
preview = true
line-length = 120
# Don't fix unused imports
unfixable = ["F401"]
# Ignore unused variables
ignore = ["F841", "E402"]
